--- a/v5/apps-customize/pom.xml
+++ b/v5/apps-customize/pom.xml
@@ -12,6 +12,18 @@
 
     <artifactId>apps-customize</artifactId>
     <version>${apps.version}</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
